--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -34,6 +34,12 @@ AddConfigEntryDialog_KeyComponentsMessage=The key must have two or three compone
 AddConfigEntryDialog_KeyLabel=&Key
 AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key
 AddConfigEntryDialog_ValueLabel=&Value
+AddRemotePage_EnterRemoteNameMessage=Please enter a remote name
+AddRemotePage_RemoteNameAlreadyExistsError=Remote already exists
+AddRemotePage_RemoteNameEmptyError=Enter a name for the remote
+AddRemotePage_RemoteNameInvalidError=Remote name is not valid
+AddRemotePage_RemoteNameLabel=&Remote name:
+AddRemoteWizard_Title=Add Remote
 AddSubmoduleWizard_WindowTitle=Add Submodule
 AddToIndexAction_addingFiles=Adding Files to Git Index
 AddToIndexCommand_addingFilesFailed=Adding files failed
@@ -620,6 +626,22 @@ PullResultDialog_MergeAlreadyUpToDateMessage=Nothing to update - everything up t
 PullResultDialog_MergeResultGroupHeader=Update Result
 PushAction_wrongURIDescription=Remote repositories URIs configuration is corrupted.
 PushAction_wrongURITitle=Corrupted Configuration
+PushBranchPage_BranchNameLabel=&Branch name:
+PushBranchPage_ChooseBranchNameError=Please choose a name for the new branch.
+PushBranchPage_ChooseRemoteError=Please choose or add a remote.
+PushBranchPage_ConfigureUpstreamCheck=Configure remote branch as &upstream
+PushBranchPage_ConfigureUpstreamCheckToolTip=This will connect the local branch to the remote branch for pushing and pulling.
+PushBranchPage_InvalidBranchNameError=Invalid branch name.
+PushBranchPage_MergeRadio=&Merge upstream changes into local branch
+PushBranchPage_NewRemoteButton=&New Remote...
+PushBranchPage_PageMessage=Select a remote and the name the branch should have on the remote.
+PushBranchPage_PageName=Push Branch
+PushBranchPage_PageTitle=Push Branch to Remote
+PushBranchPage_RebaseRadio=&Rebase commits of local branch onto upstream
+PushBranchPage_RemoteLabel=R&emote:
+PushBranchPage_UpstreamConfigGroup=When doing a pull
+PushBranchPage_UpstreamConfigOverwriteWarning=The existing upstream configuration for the branch will be overwritten.
+PushBranchWizard_WindowTitle=Push Branch {0}
 PushCommand_pushBranchTitle=Push Branch
 PushCommand_pushTagTitle=Push Tag
 PushCommitHandler_pushCommitTitle=Push Commit
