Modify access rules

--- a/project.config
+++ b/project.config
@@ -15,5 +15,7 @@
 	pushMerge = group ldap/technology.egit
 [access "refs/tags/*"]
 	pushTag = group ldap/technology.egit
+	create = group ldap/technology.egit
+	pushSignedTag = group ldap/technology.egit
 [access "refs/*"]
 	owner = group Administrators
