Modify access rules

--- a/project.config
+++ b/project.config
@@ -17,5 +17,6 @@
 	pushTag = group ldap/technology.egit
 	create = group ldap/technology.egit
 	pushSignedTag = group ldap/technology.egit
+	push = group ldap/technology.egit
 [access "refs/*"]
 	owner = group Administrators
