Don't use RepositoryProvider.getProvider() directly to avoid deadlocks
Added ResourceUtil.getGitProvider(IProject) and
ResourceUtil.isSharedWithGit(IResource) utility methods which mimics the
code in the RepositoryProvider.getProvider() without accessing any
locks.

Additionally fixed related, possible NPE's along the RepositoryMapping
constructor and getGitDirAbsolutePath() code.

Bug: 469555
Change-Id: I2349280b7fe73289a2a1cd9e8c802f8f7499327c
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -72,6 +72,7 @@ RepositoryUtil_DirectoryIsNotGitDirectory=Repository directory to configure does
 RepositoryUtil_noHead=NO-HEAD
 ResetOperation_performingReset=Performing {0} reset to {1}
 ResourceUtil_SaveLocalHistoryFailed=Saving local history of resource {0} failed
+ResourceUtil_mapProjectJob=Mapping Git provider to projects
 
 MergeOperation_InternalError=An internal error occurred
 MergeOperation_MergeFailedNoHead=Merge failed: Reference to HEAD does not exist
