[gitflow] feature rebase sometimes fails silently
- always show warning message if rebase operation was unsuccessful
- fixed conflict warning for non-feature finish operations
- refactoring to avoid redundancy
- fixed UI test

Bug: 470434
Change-Id: I963b61768add59d65070f0b193ef91eade95f28a
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -8,13 +8,15 @@
 ###############################################################################
 DynamicHistoryMenu_startGitflowReleaseFrom=Start release from commit {0}...
 FeatureFinishHandler_Conflicts=Conflicts
-FeatureFinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1}
-FeatureFinishHandler_featureFinishConflicts=Finishing feature resulted in conflicts.
+FinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1}
+AbstractGitFlowHandler_finishConflicts=Finishing resulted in conflicts.
+AbstractGitFlowHandler_rebaseConflicts=Rebasing resulted in conflicts.
 FeatureFinishHandler_finishingFeature=Finishing feature...
-FeatureRebaseHandler_conflicts=Conflicts
+FeatureRebaseHandler_problemsOccurred=Problems occurred
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
 FeatureRebaseHandler_rebasingFeature=Rebasing feature...
-FeatureRebaseHandler_resolveConflictsManually=There are conflicts that need to be resolve manually. Add your changes and continue rebase when you are finished.
+FeatureRebaseHandler_problemsOcccurredDuringRebase=Problems occurred during rebase.
+FeatureRebaseHandler_statusWas=Rebase result status was ''{0}''.
 FeatureStartHandler_pleaseProvideANameForTheNewFeature=Please provide a name for the new feature.
 FeatureStartHandler_provideFeatureName=Provide feature name
 FeatureStartHandler_startingNewFeature=Starting new Feature...
