Add external merged file to the index (after a successful merge only).
Added setting to Git preferences to enable or disable "Add external
merged file to the index (after a successful merge only)".

Change-Id: Ic5d38c176be8a8a01346e414d2e425be1965ef1a
Signed-off-by: Andre Bossert <anb0s@anbos.de>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -241,10 +241,11 @@ GitPreferenceRoot_MergeModeTooltip=Determines which content to be displayed on t
 GitPreferenceRoot_MergeTool_0_Label=Use Eclipse compare editor
 GitPreferenceRoot_MergeTool_1_Label=Use default git merge tool
 GitPreferenceRoot_MergeTool_2_Label=Use custom git merge tool
-GitPreferenceRoot_MergeToolCustomLabel=Custom merge tool:
 GitPreferenceRoot_MergeToolLabel=Merge tool to use:
 GitPreferenceRoot_MergeToolTooltip=Determines which tool to be used for merge (see .gitconfig settings for mergetool)
+GitPreferenceRoot_MergeToolCustomLabel=Custom merge tool:
 GitPreferenceRoot_MergeToolCustomTooltip=Determines which external merge tools will be used for merge.
+GitPreferenceRoot_MergeToolAutoAddLabel=Add external merged file to the index (after a successful merge only)
 GitPreferenceRoot_DiffGroupHeader=Diff
 GitPreferenceRoot_DiffTool_0_Label=Use Eclipse compare editor
 GitPreferenceRoot_DiffTool_1_Label=Use default git diff tool
