[gitflow] Add icon decorations to identify gitflow repositories
Bug 470626
Change-Id: Ibd489882dce1335e68dbe32a0881591bb260096f
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -54,3 +54,5 @@ FinishFeatureDialog_title=Feature finish options
 FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
 ReleaseFinishOperation_unexpectedConflictsReleaseAborted=Unexpected conflicts while merging to {0}. Finish release aborted.
 HotfixFinishOperation_unexpectedConflictsHotfixAborted=Unexpected conflicts while merging to {0}. Finish hotfix aborted.
+UIIcons_errorDeterminingIconBase=Can't determine icon base.
+UIIcons_errorLoadingPluginImage=Can't load plugin image.
