--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -253,6 +253,10 @@ GitPreferenceRoot_DiffToolCustomLabel=Custom diff tool:
 GitPreferenceRoot_DiffToolLabel=Diff tool to use:
 GitPreferenceRoot_DiffToolTooltip=Determines which tool to be used for diff (see .gitconfig settings for difftool)
 GitPreferenceRoot_DiffToolCustomTooltip=Determines which external diff tools will be used for diff.
+GitPreferenceRoot_BashGroupHeader=Bash
+GitPreferenceRoot_BashPathLabel=Bash path:
+GitPreferenceRoot_BashPathTooltip=This path will be used for executing external tools with .sh extension (difftool and mergetool)
+GitPreferenceRoot_BashPathVariableButton=&Variable...
 GitPreferenceRoot_RemoteConnectionsGroupHeader=Remote connections
 GitPreferenceRoot_RepoChangeScannerGroupHeader=Automatic refresh
 GitPreferenceRoot_SecureStoreGroupLabel=Secure Store
