--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -16,6 +16,9 @@ CommitFileRevision_errorLookingUpPath=IO error looking up path {1} in {0}.
 ConfigureFetchAfterCloneTask_couldNotFetch=Could not fetch with refSpec {0}
 ConnectProviderOperation_connecting=Connecting Git team provider.
 ConnectProviderOperation_ConnectingProject=Connecting project {0}
+ConnectProviderOperation_ConnectErrors=Connecting Git team provider failed. See log for details.
+ConnectProviderOperation_NoRepositoriesError=Error connecting project {0}, no Git repositories found
+ConnectProviderOperation_UnexpectedRepositoryError=Error connecting project {0}, suggested path ''{1}'' do not match found Git repositories ''{2}''.
 ContainerTreeIterator_DeletedFile=Deleted file: ''{0}''
 
 DeleteBranchOperation_TaskName=Deleting branch {0}
@@ -67,6 +70,7 @@ GitProjectData_saveFailed=Saving Git team provider data to {0} failed.
 
 RebaseInteractivePlan_WriteRebaseTodoFailed=Error writing Rebase-Todo-File
 RepositoryFinder_finding=Searching for associated repositories.
+RepositoryFinder_ResourceDoesNotExist=Resource does not exist: {0}.
 RepositoryMapping_ExceptionSubmoduleWalk=Caught exception while walking submodules
 RepositoryUtil_DirectoryIsNotGitDirectory=Repository directory to configure does not look like a Git directory: {0}
 RepositoryUtil_noHead=NO-HEAD
