Introduce "Compare mode" for Git Staging view similar to History view
A Compare Mode was introduced. Therefore a new property and a action to
change the value were created. The if the property is set to false a
double click on a file in the staging view will open it in the
workbench. To allow the user to switch the mode a action was added to
the toolbar of the view and to the view menu. Furthermore a entry to the
popup-menu was added to allow the user to compare a file with index.

Bug: 473486
Change-Id: Ifba134d4585d15dddebe16eb87ae9c2231e7cf97
Signed-off-by: Jan-Ove Weichel <ovi.weichel@gmail.com>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1469,6 +1469,7 @@ CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
 CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Workspace Version
+StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitGraphTable_CommitId=Id
 CommitGraphTable_Committer=Committer
@@ -1757,6 +1758,7 @@ StagingView_committingNotPossible=Committing is not possible
 StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
 StagingView_NoSelectionTitle=No Repository Selected
+StagingView_CompareMode=Compare Mode
 StagingView_OpenNewCommits=Open New Commits
 StagingView_ColumnLayout=Column Layout
 StagingView_RebaseAbort=Abort
