Fix NPE in GitFlowRepository.isDevelop()
NPE is thrown in isDevelop() if the JGit repository is null.
That repository is only set in the constructor, and I found 
two paths in non-test code, that could lead to this.

To make sure this fixes the issue, I added null guards for both.

Also mark the problematic parameters with null analysis annotations in
order to allow detection of similar problems at compile time

Change-Id: I607ee5c188cf1a949393eea0999bb409c0727f86
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -38,6 +38,7 @@ ReleaseFinishHandler_finishingRelease=Finishing release...
 ReleaseFinishHandler_releaseFinishConflicts=Finishing release resulted in conflicts.
 ReleaseStartHandler_provideANameForTheNewRelease=Please provide a name for the new release.
 ReleaseStartHandler_provideReleaseName=Provide release name
+ReleaseStartHandler_startCommitCouldNotBeDetermined=Start commit could not be determined.
 ReleaseStartHandler_startingNewRelease=Starting new Release...
 FeatureCheckoutHandler_checkingOutFeature=Checking out feature...
 FeatureCheckoutHandler_localFeatures=Local features:
