Add a sort order to the unstaged changes
Add a button to sort the unstaged changes in alphabetically order or in
a grouping order(sort order: Untracked, Missing, Modified), which is
also alphabetically sorted.

Bug: 473919
Change-Id: Ic59dd8f8d5f621dacfd06063d11a954d311a3e95
Signed-off-by: Denis Zygann <d.zygann@web.de>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -18,6 +18,7 @@
 #    Mickael Istria (Red Hat Inc.)            - 463339 Simple push wizard improvements
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
+#    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -1780,6 +1781,7 @@ StagingView_LinkSelection=Link with Editor and Selection
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
 StagingView_UnstageItemMenuLabel=&Remove from Index
+StagingView_UnstagedSort=Sort alphabetically
 StagingView_StageItemMenuLabel=&Add to Index
 StagingView_IgnoreItemMenuLabel=&Ignore
 StagingView_DeleteItemMenuLabel=&Delete
