--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1757,6 +1757,7 @@ StagingView_commitFailed=Commit failed
 StagingView_committingNotPossible=Committing is not possible
 StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
+StagingView_BareRepoSelection=Bare Repository Selected
 StagingView_NoSelectionTitle=No Repository Selected
 StagingView_CompareMode=Compare Mode
 StagingView_OpenNewCommits=Open New Commits
