Add default limit for number of shown lines in history
GitHistoryPage can show diffs up to 1000 lines very fast, up to 10000
lines reasonably fast, and starts to be unusable from 20000 lines
upwards.

To avoid UI freezes, a new preference is introduced in the
Team->Git->History page, in the "Show" group: "Maximum lines to show for
a diff", with default value of 1000 lines. If this preference is set,
diff output in the History view shows only specified amount of lines.

Bug: 473013
Change-Id: Ie005c179088cf94582ce730de7415a5b52caebe1
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -701,6 +701,7 @@ HistoryPreferencePage_toggleAdditionalRefs=&Additional Refs
 HistoryPreferencePage_toggleEmailAddresses=&E-mail addresses in Author/Committer columns
 HistoryPreferencePage_toggleShortenAtStart=&Shorten long tag and branch names at start
 HistoryPreferencePage_MaxBranchLength=Maximum characters to show for a &branch:
+HistoryPreferencePage_MaxDiffLines=Maximum lines to show for a &diff:
 HistoryPreferencePage_MaxTagLength=&Maximum characters to show for a tag:
 HistoryPreferencePage_ShowGroupLabel=Show
 HistoryPreferencePage_ShowInRevCommentGroupLabel=Show in Revision Comment
@@ -1882,3 +1883,5 @@ CancelAfterSaveDialog_Title=Cancel Confirmation
 
 PushMenu_PushHEAD=Push &HEAD...
 PushMenu_PushBranch=Push &Branch ''{0}''...
+
+DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
