Initializing a Gitflow repository should allow changing branch names
- added new dialog that opens when initializing the repository
- changed API for "git flow init" to accept a config PoJo
- deprecated redundant API
- added UI test

Bug: 475293
Change-Id: If7e314d749b0fcd3e77eb82576336c1aa20d4d14
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -33,6 +33,15 @@ HotfixFinishHandler_hotfixFinishConflicts=Finishing hotfix resulted in conflicts
 HotfixStartHandler_pleaseProvideANameForTheNewHotfix=Please provide a name for the new hotfix.
 HotfixStartHandler_provideHotfixName=Provide hotfix name
 HotfixStartHandler_startingNewHotfix=Starting new Hotfix...
+InitDialog_chooseBranchNamesAndPrefixes=Choose branch names and prefixes for your Gitflow repository.
+InitDialog_developBranch=Develop branch
+InitDialog_featureBranchPrefix=Feature branch prefix
+InitDialog_hotfixBranchPrefix=Hotfix branch prefix
+InitDialog_invalidBranchName=Invalid branch name: ''{0}''
+InitDialog_invalidPrefix=Invalid prefix: ''{0}''
+InitDialog_masterBranch=Master branch
+InitDialog_releaseBranchPrefix=Release branch prefix
+InitDialog_versionTagPrefix=Version tag prefix
 InitHandler_initializing=Initializing...
 ReleaseFinishHandler_Conflicts=Conflicts
 ReleaseFinishHandler_finishingRelease=Finishing release...
