Rename usage of the label "Working Directory" with "Working Tree"
During the review of my Git book Matthias Sohn pointed out that the term
"Working Directory" is misleading and the term "Working Tree" should be
used.


Bug: 475537
Change-Id: I2ca1fc53160f347a56097f26c864f687b4cc207d
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -118,7 +118,7 @@ ExistingOrNewPage_ErrorFailedToRefreshRepository=Failed to refresh project after
 ExistingOrNewPage_ExistingRepositoryLabel=&Repository:
 ExistingOrNewPage_ExistingTargetErrorMessage=Target location for project {0} already exists, cannot move project
 ExistingOrNewPage_FailedToDetectRepositoryMessage=Failed to detect which repository to use
-ExistingOrNewPage_FolderWillBeCreatedMessage=Folder {0} does not exist in working directory, will be created
+ExistingOrNewPage_FolderWillBeCreatedMessage=Folder {0} does not exist in working tree, will be created
 ExistingOrNewPage_HeaderLocation=Location
 ExistingOrNewPage_HeaderProject=Project
 ExistingOrNewPage_HeaderRepository=Repository
@@ -130,7 +130,7 @@ ExistingOrNewPage_ProjectNameColumnHeader=Project
 ExistingOrNewPage_RelativePathLabel=&Path within repository:
 ExistingOrNewPage_RepoCreationInWorkspaceCreationWarning=Creation of repositories in the Eclipse workspace is not recommended
 ExistingOrNewPage_SymbolicValueEmptyMapping=<empty repository mapping>
-ExistingOrNewPage_WorkingDirectoryLabel=Working directory:
+ExistingOrNewPage_WorkingDirectoryLabel=Working tree:
 ExistingOrNewPage_WrongPathErrorDialogMessage=The selected path is not a child of the repository working tree
 ExistingOrNewPage_WrongPathErrorDialogTitle=Wrong Path
 
@@ -201,7 +201,7 @@ GitHistoryPage_RefreshMenuLabel=&Refresh
 GitHistoryPage_RepositoryNamePattern=Repository: {0}
 GitHistoryPage_ResetBaselineToHeadMenuLabel=Reset Baseline to &Current Revision (HEAD)
 GitHistoryPage_ResetBaselineToParentOfHeadMenuLabel=Reset Baseline to &Previous Revision (HEAD^)
-GitHistoryPage_ResetHardMenuLabel=&Hard (HEAD, Index, and Working Directory)
+GitHistoryPage_ResetHardMenuLabel=&Hard (HEAD, Index, and Working Tree)
 GitHistoryPage_ResetMenuLabel=&Reset
 GitHistoryPage_ResetMixedMenuLabel=&Mixed (HEAD and Index)
 GitHistoryPage_ResetSoftMenuLabel=&Soft (HEAD Only)
@@ -246,7 +246,7 @@ GitProjectPropertyPage_LabelBranch=Branch:
 GitProjectPropertyPage_LabelGitDir=Git directory:
 GitProjectPropertyPage_LabelId=HEAD:
 GitProjectPropertyPage_LabelState=Current state:
-GitProjectPropertyPage_LabelWorkdir=Working directory:
+GitProjectPropertyPage_LabelWorkdir=Working tree:
 GitProjectPropertyPage_UnableToGetCommit=Unable to load commit {0}
 GitProjectPropertyPage_ValueEmptyRepository=None (empty repository)
 GitProjectPropertyPage_ValueUnbornBranch=None (unborn branch)
@@ -650,14 +650,14 @@ ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' stat
 ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
-ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working directory.\n\nDo you want to continue?
+ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.\n\nDo you want to continue?
 ResetTargetSelectionDialog_ResetQuestion=Confirm Reset
 ResetTargetSelectionDialog_ResetTitle=Reset: {0}
 ResetTargetSelectionDialog_ResetTypeGroup=Reset type
-ResetTargetSelectionDialog_ResetTypeHardButton=&Hard (HEAD, index, and working directory updated)
+ResetTargetSelectionDialog_ResetTypeHardButton=&Hard (HEAD, index, and working tree updated)
 ResetTargetSelectionDialog_ResetTypeMixedButton=&Mixed (HEAD and index updated)
 ResetTargetSelectionDialog_ResetTypeSoftButton=&Soft (HEAD updated)
-ResetTargetSelectionDialog_ResetTypeHEADHardButton=&Hard (index and working directory updated)
+ResetTargetSelectionDialog_ResetTypeHEADHardButton=&Hard (index and working tree updated)
 ResetTargetSelectionDialog_ResetTypeHEADMixedButton=&Mixed (index updated)
 ResetTargetSelectionDialog_SelectBranchForResetMessage=Select a branch to reset the current branch to
 ResetTargetSelectionDialog_SubjectLabel=Subject:
@@ -1123,7 +1123,7 @@ MergeTargetSelectionDialog_OnlyFastForwardButton=If &not a fast-forward, fail
 MergeTargetSelectionDialog_MergeTypeGroup=Merge options
 MergeTargetSelectionDialog_MergeTypeCommitButton=&Commit (commit the result)
 MergeTargetSelectionDialog_MergeTypeNoCommitButton=N&o commit (prepare merge commit, but don't commit yet)
-MergeTargetSelectionDialog_MergeTypeSquashButton=&Squash (merge changes into working directory, but don't create merge commit)
+MergeTargetSelectionDialog_MergeTypeSquashButton=&Squash (merge changes into working tree, but don't create merge commit)
 
 DecoratorPreferencesPage_addVariablesTitle=Add Variables
 DecoratorPreferencesPage_addVariablesAction=Add &Variables...
@@ -1176,7 +1176,7 @@ DeleteRepositoryConfirmDialog_DeleteRepositoryConfirmMessage=Confirm deletion of
 DeleteRepositoryConfirmDialog_DeleteRepositoryNoUndoWarning=Repository deletion cannot be undone.
 DeleteRepositoryConfirmDialog_DeleteRepositoryTitle=Delete Repository ''{0}''
 DeleteRepositoryConfirmDialog_DeleteRepositoryWindowTitle=Delete Repository
-DeleteRepositoryConfirmDialog_DeleteWorkingDirectoryCheckbox=Also delete &working directory:
+DeleteRepositoryConfirmDialog_DeleteWorkingDirectoryCheckbox=Also delete &working tree:
 DeleteRepositoryConfirmDialog_DeleteProjectsCheckbox=Remove {0,choice,1#the project|1<the {0} projects} in the repository from the workspace
 DeleteTagOnCommitHandler_SelectTagDialogMessage=Please select the tags you want to delete
 DeleteTagOnCommitHandler_SelectTagDialogTitle=Delete Tags
@@ -1214,7 +1214,7 @@ RepositoriesView_NothingToPasteMessage=Clipboard contains no data to paste
 RepositoriesView_PasteRepoAlreadyThere=Repository at location {0} is already in the list
 RepositoriesView_RemotesNodeText=Remotes
 RepositoriesView_TagDeletionFailureMessage=Deletion of tags failed
-RepositoriesView_WorkingDir_treenode=Working Directory
+RepositoriesView_WorkingDir_treenode=Working Tree
 RepositoriesViewActionProvider_OpenWithMenu=Open Wit&h
 RepositoriesViewContentProvider_ExceptionNodeText=Exception encountered while fetching children
 RepositoriesViewLabelProvider_LocalNodetext=Local
@@ -1612,7 +1612,7 @@ RenameBranchOnCommitHandler_SelectBranchDialogTitle=Rename Branch
 RevertFailureDialog_Message=Reverting commit ''{0}'' did not successfully complete.\n\nThe following files could not be reverted:
 RevertFailureDialog_MessageNoFiles=Reverting commit ''{0}'' did not successfully complete.
 RevertFailureDialog_ReasonChangesInIndex=Local Changes in Index
-RevertFailureDialog_ReasonChangesInWorkingDirectory=Local Changes in Working Directory
+RevertFailureDialog_ReasonChangesInWorkingDirectory=Local Changes in Working Tree
 RevertFailureDialog_ReasonDeleteFailure=Unable to Delete
 RevertFailureDialog_Title=Revert Failed
 RevertHandler_AlreadyRevertedMessage=The change has already been reverted
