Fix NPE on FeatureCheckout
- added @Nullable annotation
- check for null on each path
- prevent handler from being enabled on non-initialized repositories

Change-Id: Ibf46f80530496f256fb668b857ff435defc2fd6c
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -27,6 +27,7 @@ FeatureTrackHandler_noRemoteFeaturesFoundOnTheConfiguredRemote=No features were 
 FeatureTrackHandler_remoteFeatures=Remote features:
 FeatureTrackHandler_selectFeature=Select Feature
 FeatureTrackHandler_trackingFeature=Tracking feature...
+Handlers_noGitflowRepositoryFound=No Gitflow repository found.
 HotfixFinishHandler_Conflicts=Conflicts
 HotfixFinishHandler_finishingHotfix=Finishing hotfix...
 HotfixFinishHandler_hotfixFinishConflicts=Finishing hotfix resulted in conflicts.
